examples/test/testpolicy7458.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7458
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key7: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value25
          key24: value6
          key10: value37
      podSelector:
        matchLabels:
          key24: value21
